trying to fix containers wrapping

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@ body {
   background-color: black;
   color: white;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 #status-bar {
